# NonAnthroHands_User_Study

./: .gitignore  Batch_NAH_DTW.ipynb  GPR_for_end_effector.ipynb  GPR_for_individual_joints.ipynb  GPR_for_joint_angles.ipynb  GPR_for_user_data.ipynb  NAH_DTW.ipynb  NAH_DTW_for_JA.ipynb  NAH_GDTW.ipynb  PositionFileTxtToCSV.ipynb  README.md  Resources for VR Study Creation - readme.docx  Trajectory_Alignment.ipynb  robo_swarm_cntrl.py  trained_endeff_mean_Train17_Test0.csv
Files needed on Oculus/: Cozmo_joints.csv  Reachy_corrected_positions_14.csv  Reachy_corrected_positions_2.csv  Reachy_corrected_positions_8.csv  Reachy_joints.csv  Reachy_objects.csv  j2s6s300_corrected_positions_12.csv  j2s6s300_corrected_positions_2.csv  j2s6s300_corrected_positions_4.csv  (+3 more)
Files needed on Oculus - Follow-up study/: Reachy_corrected_positions_2.csv  Reachy_corrected_positions_4.csv  Reachy_corrected_positions_6.csv  Reachy_objects.csv  j2s6s300_corrected_positions_5.csv  j2s6s300_objects.csv
python/: pyproject.toml
python/nah/: __init__.py  alignments.py  datagraphs.py  file_labels.py  loader.py  plot.py  trajectory.py  utils.py
python/notebooks/: Batch_Data_Processing.ipynb  Batch_NAH_DTW.ipynb  Data_Visualization.ipynb  GPR_for_end_effector.ipynb  GPR_for_joint_angles.ipynb  NAH_DTW.ipynb  NAH_DTW_for_JA.ipynb  PositionFileTxtToCSV.ipynb  Scratchpad.ipynb  Trajectory_Alignment.ipynb
python/scripts/: varun01_plot_trajectory.py  varun02_trajectory_alignment.py
python/tests/: test_data_loading.py  test_loader.py  test_trajectory_alignment.py  test_utils.py
(+3143 files in other folders)
