[project]
name = "nah"
version = "1.0.0"
authors = [
  { name = "Jennifer Molnar", email = "jmolnar@gatech.edu" },
  { name = "Varun Agrawal", email = "varunagrawal@gatech.edu" },
]
description = "Experimental analyses"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy", "fastdtw", "matplotlib", "pandas", "scipy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
